<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textField"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.1"
        android:editable="false"
        android:password="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:id="@+id/deleteButton"
        android:layout_gravity="center_horizontal|right"
        android:layout_weight="0.1"
        android:textSize="24dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4"
        android:rowCount="4"
        android:layout_weight=".8">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_7_string"
            android:id="@+id/button7"
            android:layout_columnWeight=".1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_8_string"
            android:id="@+id/button8"
            android:layout_columnWeight=".1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_9_string"
            android:id="@+id/button9"
            android:layout_columnWeight=".1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_division_string"
            android:id="@+id/button_division"
            android:layout_columnWeight=".1"
            android:layout_rowWeight=".1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_4_string"
            android:id="@+id/button4"
            android:layout_columnWeight=".1"
            android:layout_rowWeight=".1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_5_string"
            android:id="@+id/button5"
            android:layout_columnWeight=".1"
            android:layout_rowWeight=".1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_6_string"
            android:id="@+id/button6"
            android:layout_columnWeight=".1"
            android:layout_rowWeight=".1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_multiply_string"
            android:id="@+id/button_multiplication" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_1_string"
            android:id="@+id/button1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_2_string"
            android:id="@+id/button2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_3_string"
            android:id="@+id/button3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_minus_string"
            android:id="@+id/button_subtraction" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_decimal_string"
            android:id="@+id/button_decimal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_0_string"
            android:id="@+id/button0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_equals_string"
            android:id="@+id/button_equals" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_plus_string"
            android:id="@+id/button_addition" />

    </GridLayout>
</LinearLayout>